--- a/portifolio/index.html
+++ b/portifolio/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -15,6 +16,7 @@
     <a href="https://www.instagram.com/devpabloh/">Instagram</a>
     <a href="https://github.com/devpabloh">GitHub</a>
     <a href="https://www.linkedin.com/in/pablo-henrique-245709207/">Linkedin</a>
+    <img src="assets/Perfil.png" alt="Foto do perfil de Pablo Henrique desenvolvedor frot end ">
     </main>
     <footer>
 
