--- a/portifolio/index.html
+++ b/portifolio/index.html
@@ -11,8 +11,8 @@
 
     </header>
     <main>
-    <h1>Eleve seu negócio digital a outro nível com <strong>um Front-end de qualidade!</strong></h1>
-    <p>Olá! Sou Pablo Henrique, desenvolvedora Front-end com especialidade em React, Javascript, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
+    <h1>Eleve seu negócio digital a outro nível com <strong class="highlightTitle">um Front-end de qualidade!</strong></h1>
+    <p>Olá! Sou Pablo Henrique, desenvolvedora Front-end com especialidade em <strong>React, Javascript, HTML e CSS</strong>. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
     <a href="https://www.instagram.com/devpabloh/">Instagram</a>
     <a href="https://github.com/devpabloh">GitHub</a>
     <a href="https://www.linkedin.com/in/pablo-henrique-245709207/">Linkedin</a>
