--- a/portifolio/index.html
+++ b/portifolio/index.html
@@ -4,18 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifolio</title>
+    <!-- CSS -->
     <link rel="stylesheet" href="style.css">
+    <!-- Fontes -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Krona+One&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <header>
 
     </header>
-    <main>
-    <h1>Eleve seu negócio digital a outro nível com <strong class="highlightTitle">um Front-end de qualidade!</strong></h1>
-    <p>Olá! Sou Pablo Henrique, desenvolvedora Front-end com especialidade em <strong>React, Javascript, HTML e CSS</strong>. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
-    <a href="https://www.instagram.com/devpabloh/">Instagram</a>
-    <a href="https://github.com/devpabloh">GitHub</a>
-    <a href="https://www.linkedin.com/in/pablo-henrique-245709207/">Linkedin</a>
+    <main class="presentation">
+        <section class="presentation__content">
+            <h1 class="presentation__content__title">Eleve seu negócio digital a outro nível com <strong class="highlightTitle">um Front-end de qualidade!</strong></h1>
+            <p class="presentation__content__text">Olá! Sou Pablo Henrique, desenvolvedora Front-end com especialidade em <strong>React, Javascript, HTML e CSS</strong>. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
+            <a href="https://www.instagram.com/devpabloh/">Instagram</a>
+            <a href="https://github.com/devpabloh">GitHub</a>
+            <a href="https://www.linkedin.com/in/pablo-henrique-245709207/">Linkedin</a>
+        </section>
     <img src="assets/Perfil.png" alt="Foto do perfil de Pablo Henrique desenvolvedor frot end ">
     </main>
     <footer>
