--- a/portifolio/index.html
+++ b/portifolio/index.html
@@ -24,9 +24,11 @@
         <section class="presentation__content">
             <h1 class="presentation__content__title">Eleve seu negócio digital a outro nível com <strong class="highlightTitle">um Front-end de qualidade!</strong></h1>
             <p class="presentation__content__text">Olá! Sou Pablo Henrique, desenvolvedora Front-end com especialidade em <strong>React, Javascript, HTML e CSS</strong>. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
-            <a href="https://www.instagram.com/devpabloh/">Instagram</a>
-            <a href="https://github.com/devpabloh">GitHub</a>
-            <a href="https://www.linkedin.com/in/pablo-henrique-245709207/">Linkedin</a>
+            <div class="presentation__links">
+                <a href="https://www.instagram.com/devpabloh/" class="presentation__links__link">Instagram</a>
+                <a href="https://github.com/devpabloh" class="presentation__links__link">GitHub</a>
+                <a href="https://www.linkedin.com/in/pablo-henrique-245709207/" class="presentation__links__link">Linkedin</a>
+            </div>
         </section>
     <img src="assets/Perfil.png" alt="Foto do perfil de Pablo Henrique desenvolvedor frot end ">
     </main>
