--- a/portifolio/index.html
+++ b/portifolio/index.html
@@ -25,6 +25,7 @@
             <h1 class="presentation__content__title">Eleve seu negócio digital a outro nível com <strong class="highlightTitle">um Front-end de qualidade!</strong></h1>
             <p class="presentation__content__text">Olá! Sou Pablo Henrique, desenvolvedora Front-end com especialidade em <strong>React, Javascript, HTML e CSS</strong>. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
             <div class="presentation__links">
+                <h2 class="presentation__links__subtitle">Acesse minhas redes:</h2>
                 <a href="https://www.instagram.com/devpabloh/" class="presentation__links__link">Instagram</a>
                 <a href="https://github.com/devpabloh" class="presentation__links__link">GitHub</a>
                 <a href="https://www.linkedin.com/in/pablo-henrique-245709207/" class="presentation__links__link">Linkedin</a>
