--- a/portifolio/index.html
+++ b/portifolio/index.html
@@ -26,12 +26,14 @@
             <p class="presentation__content__text">Olá! Sou Pablo Henrique, desenvolvedora Front-end com especialidade em <strong>React, Javascript, HTML e CSS</strong>. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
             <div class="presentation__links">
                 <h2 class="presentation__links__subtitle">Acesse minhas redes:</h2>
-                <a href="https://www.instagram.com/devpabloh/" class="presentation__links__link">Instagram</a>
-                <a href="https://github.com/devpabloh" class="presentation__links__link">GitHub</a>
-                <a href="https://www.linkedin.com/in/pablo-henrique-245709207/" class="presentation__links__link">Linkedin</a>
+                <a href="https://github.com/devpabloh" class="presentation__links__link"> <img src="assets/GitHub.png" alt="logo do github"> GitHub</a>
+                <a href="https://www.instagram.com/devpabloh/" class="presentation__links__link">
+                    <img src="assets/instagram-logo-instagram-icon-transparent-free-png.webp" alt="logo do instagram">Instagram</a>
+                <a href="https://www.linkedin.com/in/pablo-henrique-245709207/" class="presentation__links__link">
+                    <img src="assets/LinkedIn-Icon-Dark.png" alt="Logo do linkedin">Linkedin</a>
             </div>
         </section>
-    <img src="assets/Perfil.png" alt="Foto do perfil de Pablo Henrique desenvolvedor frot end ">
+        <img class="imagem__perfil" src="assets/Perfil.png" alt="Foto do perfil de Pablo Henrique desenvolvedor frot end ">
     </main>
     <footer>
 
