--- a/portifolio/index.html
+++ b/portifolio/index.html
@@ -17,8 +17,11 @@
 
 </head>
 <body>
-    <header>
-
+    <header class="cabecalho">
+        <nav class="cabecalho__menu">
+            <a href="" class="cabecalho__menu__link">Home</a>
+            <a href="" class="cabecalho__menu__link">Sobre mim</a>
+        </nav>
     </header>
     <main class="presentation">
         <section class="presentation__content">
@@ -28,15 +31,15 @@
                 <h2 class="presentation__links__subtitle">Acesse minhas redes:</h2>
                 <a href="https://github.com/devpabloh" class="presentation__links__link"> <img src="assets/GitHub.png" alt="logo do github"> GitHub</a>
                 <a href="https://www.instagram.com/devpabloh/" class="presentation__links__link">
-                    <img src="assets/instagram-logo-instagram-icon-transparent-free-png.webp" alt="logo do instagram">Instagram</a>
+                    <img src="assets/instagram-fill-icon-512x512-1byezrw7.png" alt="logo do instagram">Instagram</a>
                 <a href="https://www.linkedin.com/in/pablo-henrique-245709207/" class="presentation__links__link">
                     <img src="assets/LinkedIn-Icon-Dark.png" alt="Logo do linkedin">Linkedin</a>
             </div>
         </section>
         <img class="imagem__perfil" src="assets/Perfil.png" alt="Foto do perfil de Pablo Henrique desenvolvedor frot end ">
     </main>
-    <footer>
-
+    <footer class="rodape">
+        <p>Desenvolvido por Pablo Henrique.</p>
     </footer>
 </body>
 </html>
