--- a/portifolio/index.html
+++ b/portifolio/index.html
@@ -19,8 +19,8 @@
 <body>
     <header class="cabecalho">
         <nav class="cabecalho__menu">
-            <a href="" class="cabecalho__menu__link">Home</a>
-            <a href="" class="cabecalho__menu__link">Sobre mim</a>
+            <a href="index.html" class="cabecalho__menu__link">Home</a>
+            <a href="pages/About.html" class="cabecalho__menu__link">Sobre mim</a>
         </nav>
     </header>
     <main class="presentation">
