--- a/portifolio/pages/About.html
+++ b/portifolio/pages/About.html
@@ -24,6 +24,8 @@
         </nav>
     </header>
     <main></main>
-    <footer></footer>
+    <footer class="rodape">
+        <p>Desenvolvido por Pablo Henrique.</p>
+    </footer>
 </body>
 </html>
