--- a/portifolio/pages/About.html
+++ b/portifolio/pages/About.html
@@ -23,7 +23,17 @@
             <a href="pages/About.html" class="cabecalho__menu__link">Sobre mim</a>
         </nav>
     </header>
-    <main></main>
+    <main class="presentation">
+        <section class="presentation__content">
+            <h1 class="presentation__content__title">Sobre mim</h1>
+            <p class="presentation__content__text">Meu nome é Pablo Henrique e minha história é marcada por uma busca incessante por conhecimento e superação. Desde cedo, procurei me aprimorar e adquirir novas habilidades, sempre com o objetivo de alcançar meus sonhos. Minha trajetória profissional foi marcada por diferentes desafios e conquistas, que me moldaram como pessoa e me ensinaram lições valiosas.</p>
+            <p class="presentation__content__text">Após concluir o ensino médio, ingressei na faculdade de Administração de Empresas, buscando uma base sólida para iniciar minha carreira. Com a graduação em mãos, tive a oportunidade de trabalhar na área por um tempo, aprimorando minhas habilidades e conhecimentos práticos.</p>
+            <p class="presentation__content__text">Em seguida, fui convidado a trabalhar em uma empresa de contabilidade, onde tive a chance de me aprofundar na área contábil e me especializar em gestão tributária através de uma pós-graduação. Essa experiência me proporcionou um crescimento profissional significativo e me permitiu desenvolver novas competências.</p>
+            <p class="presentation__content__text">Ao longo dessa jornada, aprendi a valorizar cada etapa da minha vida, tanto os momentos de sucesso quanto os de dificuldade. As experiências que vivi me proporcionaram um crescimento pessoal e profissional imensurável, me tornando uma pessoa mais forte, resiliente e determinada.</p>
+            <p class="presentation__content__text">Hoje, me encontro em uma fase de transição de carreira, buscando realizar meu sonho de trabalhar com tecnologia. Agradeço imensamente a todos que me apoiaram e me incentivaram ao longo do caminho, e me sinto confiante e preparado para os novos desafios que me aguardam.</p>
+        </section>
+        <img src="../assets/Perfil.png" alt="" class="imagem__perfil">
+    </main>
     <footer class="rodape">
         <p>Desenvolvido por Pablo Henrique.</p>
     </footer>
